# wisp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  setup.rs  ssh.rs
src/telemetry/: azure.rs  docker.rs  mod.rs
src/tui/: mod.rs  picker.rs  ui.rs
src/web/: mod.rs  ws.rs
static/: index.html
