[package]
name = "wisp"
version = "0.1.0"
edition = "2024"
description = "Tailscale-native, agentless infrastructure control plane"

[dependencies]
tokio = { version = "1", features = ["full"] }
russh = "0.57"
# russh vendors a forked ssh-key under this package name; must match exactly
ssh-key = { version = "=0.6.16", package = "internal-russh-forked-ssh-key" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
crossterm = "0.29"
axum = { version = "0.8", features = ["ws"] }
rust-embed = "8"
reqwest = { version = "0.12", features = ["json"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
