[package]
name = "wisp"
version = "0.1.0"
edition = "2024"
description = "Tailscale-native, agentless infrastructure control plane"
authors = ["Jake Abendroth"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
crossterm = "0.29"
axum = { version = "0.8", features = ["ws"] }
rust-embed = "8"
reqwest = { version = "0.12", features = ["json"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
